--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,14 @@
+set -g default-terminal "tmux-256color"
+
+set -as terminal-overrides ",*:U8=0"
+
+setw -g automatic-rename off
+
 set -g prefix `
 unbind C-b
 bind ` send-prefix
 
-bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
+bind R source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
@@ -11,25 +17,38 @@ bind-key l select-pane -R
 bind -r H select-window -t :-
 bind -r L select-window -t :+
 
-bind-key -r - split-window
-bind-key -r / split-window -h
-bind-key -r \ split-window -h
-bind-key -r | split-window -h
+bind-key -r - split-window -c "#{pane_current_path}"
+bind-key -r _ split-window -c "#{pane_current_path}"
+bind-key -r / split-window -h -c "#{pane_current_path}"
+bind-key -r \ split-window -h -c "#{pane_current_path}"
+bind-key -r | split-window -h -c "#{pane_current_path}"
 
-set -g default-terminal "screen-256color"
-
-setw -g window-status-current-fg '#000000'
-setw -g window-status-current-bg '#00bb00'
-
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white 
-set -g pane-active-border-bg yellow
-
-set -g message-fg white 
-set -g message-bg black 
-set -g message-attr bright
 
 setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+unbind p
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+
+bind-key -T copy-mode-vi 'Space' send -X halfpage-down
+bind-key -T copy-mode-vi 'Bspace' send -X halfpage-up
+
+set -g status-position bottom
+setw -g window-status-style fg=cyan,bg=black
+setw -g window-status-current-style fg=white,bold,bg='#00bb00'
+
+setw -g pane-border-style fg=colour240
+setw -g pane-active-border-style fg=colour12#,bg=black
+
+set -g message-style fg=white,bold,bg=black
+
+# enable activity alerts 
+setw -g monitor-activity on
+set -g visual-activity on
+
+# pane movement
+bind-key C-t command-prompt -p "send pane to:" "join-pane -t ':%%'"
+
 set -g status-left ''
-set -g status-right '#[bg=#00bb00] [#S] #[default] #[bg=#00bb00] [#h] #[default] #[bg=#00bb00] %m-%d #[default] #[bg=#00bb00] %H:%M '
+set -g status-justify left
+set -g status-right '#[bg=green,fg=black,bold] [#S] #I:#P #[default] #[bg=green,fg=black,bold] %H:%M '
