--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
-bind -r H select-window -t :-
-bind -r L select-window -t :+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
 bind-key -r - split-window -c "#{pane_current_path}"
 bind-key -r _ split-window -c "#{pane_current_path}"
@@ -23,7 +23,10 @@ bind-key -r / split-window -h -c "#{pane_current_path}"
 bind-key -r \ split-window -h -c "#{pane_current_path}"
 bind-key -r | split-window -h -c "#{pane_current_path}"
 
-
+bind -r H resize-pane -L 3
+bind -r J resize-pane -D 3
+bind -r K resize-pane -U 3
+bind -r L resize-pane -R 3 
 setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
@@ -34,6 +37,7 @@ bind-key -T copy-mode-vi 'Space' send -X halfpage-down
 bind-key -T copy-mode-vi 'Bspace' send -X halfpage-up
 
 set -g status-position bottom
+set -g status-style fg=white,bold,bg=black
 setw -g window-status-style fg=cyan,bg=black
 setw -g window-status-current-style fg=white,bold,bg='#00bb00'
 
