--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -64,7 +64,7 @@ font-3 = FontAwesome:pixelsize=14;2
 
 modules-left = i3 xwindow
 modules-center = mpd
-modules-right = backlight alsa wlan battery date 
+modules-right = pmenu backlight alsa wlan battery date 
 
 ; tray-position = right
 ; tray-padding = 4
@@ -117,7 +117,7 @@ font-3 = FontAwesome:pixelsize=14;2
 
 modules-left = i3
 modules-center = networkspeedup networkspeeddown
-modules-right = filesystem-slash temperature cpu memory powermenu
+modules-right = filesystem-slash temperature cpu memory
 
 ; tray-position = right
 ; tray-padding = 2
@@ -279,7 +279,7 @@ bar-empty-foreground = ${colors.foreground-alt}
 type = internal/cpu
 interval = 2
 format = <ramp-coreload>
-format-prefix = " "
+; format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-underline = #f90000
 label = %percentage%
@@ -323,10 +323,12 @@ format-connected-prefix = " "
 format-connected-prefix-foreground = #5b
 
 format-connected-underline = #9f78e1
-;format-disconnected-underline = ${self.format-connected-underline}
+format-disconnected-underline = ${self.format-connected-underline}
 
-label-connected = "%{A1:connman-gtk &:}%essid%%{A}"
-label-disconnected = "%{A1:connman-gtk &:}%{A}"
+; label-connected = "%{A1:connman-gtk &:}%essid%%{A}"
+label-connected = "%essid%%{A}"
+; label-disconnected = "%{A1:connman-gtk &:}%{A}"
+label-disconnected = "%{A}"
 label-disconnected-foreground = #5b
 
 ramp-signal-0 = 
@@ -499,39 +501,47 @@ format-underline = #268bd2
 format-prefix = " "
 format-prefix-foreground = #5b
 
-[module/powermenu]
+[module/pmenu]
 type = custom/menu
 
-label-open = 
+; label-open = 
+label-open = 
 label-open-foreground = #ff5c56
 label-close =  cancel
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = reboot
+menu-0-0 = power
+menu-0-1 = terminal
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-menu-0-2 = log out
-menu-0-2-exec = menu-open-3
-menu-0-3 = 
-menu-0-3-exec = "~/.i3/i3lock-fancy-multimonitor/lock &"
+menu-0-1-exec = termite
 
-menu-1-0 = cancel
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-0 = reboot
+menu-1-0-exec = menu-open-2
+menu-1-1 = power off
+menu-1-1-exec = menu-open-3
+menu-1-2 = log out
+menu-1-2-exec = menu-open-4
+menu-1-3 = sleep
+menu-1-3-exec = systemctl suspend
+menu-1-4 = 
+menu-1-4-exec = "betterlockscreen --lock &"
 
-menu-2-0 = power off
-menu-2-0-exec = shutdown now
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
+menu-2-0 = cancel
+menu-2-0-exec = menu-open-0
+menu-2-1 = reboot
+menu-2-1-exec = reboot
 
-menu-3-0 = log out
-menu-3-0-exec = i3-msg exit
+menu-3-0 = power off
+menu-3-0-exec = shutdown now
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
+
+menu-4-0 = log out
+menu-4-0-exec = i3-msg exit
+menu-4-1 = cancel
+menu-4-1-exec = menu-open-0
 
 [module/alsa]
 type = internal/alsa
