--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -152,6 +152,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+
 label-mounted = "%{F#5b5b5b}%{F-} %percentage_used%%"
 
 ;label-unmounted = %mountpoint%: not mounted
@@ -263,6 +264,7 @@ click-left = connman-gtk
 
 format = <label> <bar>
 label = ""
+
 
 bar-width = 10
 bar-indicator = |
@@ -378,7 +380,7 @@ date =
 date-alt = " %Y-%m-%d"
 
 time = %H:%M
-time-alt = %H:%M:%S
+time-alt = %H:%M
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
@@ -419,45 +421,44 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 type = internal/battery
 battery = BAT0
 adapter = AC0
-full-at = 96
+full-at = 90
 
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+time-format = %H:%M
 
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+format-charging = <animation-charging><label-charging>
+format-charging-underline = #00ffaf
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+format-discharging = <ramp-capacity><label-discharging>
+format-discharging-underline = #ffb52a
+
+format-full = <ramp-capacity><label-full>
+format-full-underline = #00ffaf
+
+label-charging = %percentage%%
+label-discharging = %percentage%%
+label-full = FULL
+
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-animation-charging-foreground = ${colors.foreground-alt}
+; Framerate in milliseconds
 animation-charging-framerate = 750
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
-thermal-zone = 1
+; thermal-zone = 1
 warn-temperature = 60
+interval = 0.5
 
 format = <ramp> <label>
 format-underline = #f50a4d
@@ -466,11 +467,11 @@ format-warn-underline = ${self.format-underline}
 
 label = %temperature%
 label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = #f00
 
-ramp-0 = 
+ramp-0 = 
 ramp-1 = 
-ramp-2 = 
+ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
 
 [module/pkg]
@@ -513,9 +514,11 @@ label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = power
-menu-0-1 = terminal
 menu-0-0-exec = menu-open-1
-menu-0-1-exec = termite
+menu-0-1 = terminal
+menu-0-1-exec = termite &
+menu-0-2 = App
+menu-0-2-exec = menu-open-5
 
 menu-1-0 = reboot
 menu-1-0-exec = menu-open-2
@@ -542,6 +545,9 @@ menu-4-0 = log out
 menu-4-0-exec = i3-msg exit
 menu-4-1 = cancel
 menu-4-1-exec = menu-open-0
+
+menu-5-0 = cancel
+menu-5-0-exec = menu-open-0
 
 [module/alsa]
 type = internal/alsa
