--- a/.i3/config
+++ b/.i3/config
@@ -143,8 +143,8 @@ bindsym Mod1+Shift+0 move container to workspace 10
 # reload the configuration file
 bindsym Mod1+Shift+c reload
 bindsym Mod1+Shift+r restart
-# bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym Mod1+Shift+e exit
+bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym Mod1+Shift+e exit
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
