--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -217,15 +217,6 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 ; Separator in between workspaces
 label-separator = 
 
-[module/github]
-type = internal/github
-token = ${env:GITHUB_TOKEN}
-
-label = "%notifications%"
-format-underline = #2aa198
-format-prefix = " "
-format-prefix-foreground = #5b
-
 [module/mpd]
 type = internal/mpd
 
@@ -287,9 +278,9 @@ format-prefix-foreground = ${colors.foreground-alt}
 label = %percentage%
 ramp-coreload-0 = %{F#5b}▁%{F-}
 ramp-coreload-1 = %{F#5b}▂%{F-}
-ramp-coreload-2 = %{F#5b}▃%{F-}
-ramp-coreload-3 = %{F#ff5c57}▄%{F-}
-ramp-coreload-4 = %{F#ff5c57}▅%{F-}
+ramp-coreload-2 = %{F#ffb52a}▃%{F-}
+ramp-coreload-3 = %{F#ffb52a}▄%{F-}
+ramp-coreload-4 = %{F#ffb52a}▅%{F-}
 ramp-coreload-5 = %{F#ff5c57}▆%{F-}
 ramp-coreload-6 = %{F#ff5c57}▇%{F-}
 ramp-coreload-7 = %{F#ff5c57}█%{F-}
@@ -308,7 +299,7 @@ bar-used-foreground-0 = #5af78e
 bar-used-foreground-1 = #5af78e
 bar-used-foreground-2 = #f3f99d
 bar-used-foreground-3 = #ff5c57
-;bar-used-fill = ▐
+; bar-used-fill = ▐
 bar-used-fill = 
 bar-used-empty = 
 bar-used-empty-foreground = #444444
@@ -325,7 +316,7 @@ format-connected-prefix = " "
 format-connected-prefix-foreground = #5b
 
 format-connected-underline = #9f78e1
-format-disconnected-underline = ${self.format-connected-underline}
+format-disconnected-underline = #df0000
 
 ; label-connected = "%{A1:connman-gtk &:}%essid%%{A}"
 label-connected = "%essid%%{A}"
@@ -528,8 +519,11 @@ menu-1-2 = log out
 menu-1-2-exec = menu-open-4
 menu-1-3 = sleep
 menu-1-3-exec = systemctl suspend
-menu-1-4 = 
+# menu-1-4 = 
+menu-1-4 = lock
 menu-1-4-exec = "betterlockscreen --lock &"
+menu-1-5 = cancel
+menu-1-5-exec = menu-open-0
 
 menu-2-0 = cancel
 menu-2-0-exec = menu-open-0
@@ -558,7 +552,8 @@ label-volume-foreground = ${root.foreground}
 
 format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
+format-muted-underline = #df0000
+label-muted = Muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
