--- a/.config/i3/config
+++ b/.config/i3/config
@@ -87,7 +87,7 @@ client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 #i3-gaps
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border pixel 1.5
 gaps inner 4
 gaps outer -4
 smart_gaps on
@@ -222,6 +222,7 @@ bindsym Mod1+z exec sh ~/.scr/touchpad.sh
 bindsym Mod1+x exec sh ~/.scr/touchtouch.sh
 # Others
 bindsym XF86Mail exec --no-startup-id thunderbird
+bindsym Mod1+n exec sh ~/.config/i3/wallpaper.sh
 exec i3-config-wizard
 exec --no-startup-id i3-msg "workspace 1"
 exec compton &
