--- a/.config/aria2/aria2.conf
+++ b/.config/aria2/aria2.conf
@@ -12,7 +12,7 @@ max-concurrent-downloads=5
 #断点续传
 continue=true
 #同服务器连接数
-max-connection-per-server=16
+max-connection-per-server=24
 #最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
 min-split-size=1M
 #单文件最大线程数, 路由建议值: 5
@@ -26,7 +26,7 @@ max-overall-upload-limit=0
 #单文件速度限制
 max-upload-limit=0
 #断开速度过慢的连接
-#lowest-speed-limit=0
+lowest-speed-limit=1
 #验证用，需要1.16.1之后的release版本
 #referer=*
 
@@ -54,7 +54,7 @@ bt-enable-lpd=true
 #添加额外的tracker
 #bt-tracker=<URI>,…
 #单种子最大连接数
-#bt-max-peers=55
+bt-max-peers=55
 #强制加密, 防迅雷必备
 #bt-require-crypto=true
 #当下载的文件是一个种子(以.torrent结尾)时, 自动下载BT
@@ -70,7 +70,7 @@ enable-peer-exchange=false
 user-agent=uTorrent/2210(25130)
 peer-id-prefix=-UT2210-
 #修改做种设置, 允许做种
-seed-ratio=0
+seed-ratio=1
 #保存会话
 force-save=false
 bt-hash-check-seed=true
