--- a/.config/i3/config
+++ b/.config/i3/config
@@ -106,6 +106,7 @@ for_window [class="Wine"]                floating enable, border pixel 1
 for_window [class="feh"]                 floating enable, border pixel 1
 for_window [class="netease-cloud-music"] floating enable, border pixel 1
 for_window [class="Gtkwave" instance="gtkwave"]   floating enable, border pixel 1
+for_window [class="Shutter" instance="shutter"]   floating enable, border pixel 1
 
 # assigns focus
 # assign [class="Connman-gtk"] $tag10
