--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -64,23 +64,23 @@ font-3 = FontAwesome:pixelsize=14;2
 
 modules-left = i3 xwindow
 ; modules-center = mpd
-modules-right = pmenu backlight alsa wlan battery date 
+modules-right = pmenu backlight alsa wlan eth battery date
 
-; tray-position = right
-; tray-padding = 4
-; tray-transparent = true
+ tray-position = center
+ tray-padding = 4
+tray-transparent = false
 ; tray-background = #0063ff
 
-;wm-restack = bspwm
-;wm-restack = i3
+; wm-restack = bspwm
+wm-restack = i3
 
 ;override-redirect = true
 
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
+; scroll-up = bspwm-desknext
+; scroll-down = bspwm-deskprev
 
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+; scroll-up = i3wm-wsnext
+; scroll-down = i3wm-wsprev
 
 [bar/bottom]
 ;monitor = ${env:MONITOR}
@@ -215,7 +215,7 @@ label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 ; Separator in between workspaces
-label-separator = 
+label-separator =
 
 [module/mpd]
 type = internal/mpd
@@ -321,7 +321,7 @@ format-disconnected-underline = #df0000
 ; label-connected = "%{A1:connman-gtk &:}%essid%%{A}"
 label-connected = "%essid%%{A}"
 ; label-disconnected = "%{A1:connman-gtk &:}%{A}"
-label-disconnected = "%{A}"
+label-disconnected = "%ifname%"
 label-disconnected-foreground = #5b
 
 ramp-signal-0 = 
@@ -333,15 +333,16 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-;interface = br0
+interface = enp0s25
 interval = 3.0
 
-format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-underline = #9f78e1
+; format-connected-prefix = " "
 format-connected-foreground-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
+label-connected = %ifname%
 
-format-disconnected-underline = ${self.format-connected-underline}
+; format-disconnected-underline = ${self.format-connected-underline}
+format-disconnected-underline = #df0000
 label-disconnected = %ifname%
 label-disconnected-foreground = ${colors.foreground-alt}
 
@@ -499,7 +500,7 @@ type = custom/menu
 ; label-open = 
 label-open = 
 label-open-foreground = #ff5c56
-label-close =  
+label-close = 
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
