--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -577,7 +577,7 @@ image_source=".config/neofetch/archlinux.png"
 #       Change this to 'Lubuntu', 'Xubuntu', 'Ubuntu-GNOME' or 'Ubuntu-Budgie' to use the flavors.
 # NOTE: Arch, Crux and Gentoo have a smaller logo variant.
 #       Change this to 'arch_small', 'crux_small' or 'gentoo_small' to use the small logos.
-ascii_distro="auto"
+#ascii_distro="auto"
 
 # Ascii Colors
 #
