--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,9 +4,7 @@ set -as terminal-overrides ",*:U8=0"
 
 setw -g automatic-rename off
 
-set -g prefix C-SPACE
-unbind C-b
-bind ` send-prefix
+set -g prefix C-b
 
 bind R source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key k select-pane -U
@@ -28,13 +26,13 @@ bind -r J resize-pane -D 3
 bind -r K resize-pane -U 3
 bind -r L resize-pane -R 3 
 setw -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+# bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 unbind p
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
-bind-key -T copy-mode-vi 'Space' send -X halfpage-down
-bind-key -T copy-mode-vi 'Bspace' send -X halfpage-up
+# bind-key -T copy-mode-vi 'Space' send -X halfpage-down
+# bind-key -T copy-mode-vi 'Bspace' send -X halfpage-up
 
 set -g status-position bottom
 set -g status-style fg=white,bold,bg=black
