--- a/archlinux/backlight.service
+++ b/archlinux/backlight.service
@@ -1,10 +1,12 @@
 [Unit]
-Description = change permission for /sys/class/backlight/nv_backlight/brightness
+Description = change permission for /sys/class/backlight/XXX/brightness
 
 [Service]
 Type=simple
 ExecStart=/usr/bin/sleep 5
 ExecStartPost=/usr/bin/chmod 666 /sys/class/backlight/XXX/brightness 
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
